--- a/server/public/offlinePage.html
+++ b/server/public/offlinePage.html
@@ -1,18 +1,15 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Unsplash slider with mapbox">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#a6bedd">
-    <link rel="icon" href="/images/icons/icon-384x384.png" type="x-icon"/>
+    <meta name="description" content="Volkswagen">
     <link rel="stylesheet" href="/css/index.css">
-    <title>Unsplash photos</title>
+    <title>Volkswagen online</title>
 </head>
 <body>
     <h1>Oops!😰</h1>
     <p>You don't seem to have internet connectivity at the moment 😰.</p>
 </body>
-</html> -->
+</html>
